--- a/main.html
+++ b/main.html
@@ -4,11 +4,15 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Git</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+    <p><b>"My intro to Git and colab"</b></p>
     <script type="text/javascript" src="./script.js">
+		
+		
 </script>
 
 </body>
